Some styles are fixed. Middle row does not overflow out of its size BottomRow component is added to contain status bar and anything else that needs to be on the bottom The scrollbar for files needs some work

--- a/public/src/styles/CodeEditor.css
+++ b/public/src/styles/CodeEditor.css
@@ -1,6 +1,6 @@
 .code {
-	height: calc( 100% - 32px );
-    height: -webkit-calc( 100% - 32px );
+	/* height: calc( 100% - 32px );
+    height: -webkit-calc( 100% - 32px ); */
 	width: 80%;
 	background: #fafafa;
 	color: #A0A0A0;	
