--- a/public/src/styles/RightSideBar.css
+++ b/public/src/styles/RightSideBar.css
@@ -1,7 +1,7 @@
 .RightSideBarContainer{
     width:5%;
-    height: calc( 100% - 32px );
-    height: -webkit-calc( 100% - 32px );
+    /* height: calc( 100% - 32px );
+    height: -webkit-calc( 100% - 32px ); */
     box-shadow: inset 0 2px 0 rgba(255,255,255,.05), inset 0 1px 0 rgba(0,0,0,.4);  /*Top Shadow*/
 }
 .RightSideBarSub{
